# graph-project-2023

./: .gitignore  Graph_feature.ipynb  Graph_feature_and_prediction_part_with_vizualization.ipynb  feature_formation.py  main.ipynb  main.py  pyproject.toml  run_tests.sh  test.py
Results/Test graphs/: result3.txt  result6.txt
datasets/email-Eu-core-temporal/: description
datasets/munmun_digg_reply/: out.munmun_digg_reply
datasets/soc-sign-bitcoinalpha/: out.soc-sign-bitcoinalpha
datasets/soc-sign-bitcoinotc/: out.soc-sign-bitcoinotc
python-graphs/: base.py
python_graphs/: adapter.py  base.py  fature_formation.py  feature_formation.py  model-training.py  model_training.py  visualization.py
tests/results/: result1.txt  result10.txt  result2.txt  result4.txt  result5.txt  result8.txt  result9.txt
