[tool.poetry]
name = "graph-project-2023"
version = "0.1.0"
description = ""
authors = ["mark47B <windachae47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
numpy = "^1.24.3"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
